--- a/index.izu.html.html
+++ b/index.izu.html.html
@@ -1,6 +1,4 @@
-<script type="text/javascript">
-<!--
-document.write(unescape('<!doctype html>
+<!doctype html>
 <html lang="en">
 
 <head>
@@ -10507,6 +10505,4 @@ $(document).ready(function() {
 });
 </script>
 
-</html>'));
-//-->
-</script>
+</html>
